# TextbookReview

./: .gitignore  README.md  main.py  pyproject.toml
src/agents/: review_agent.py
src/tools/: excel_tool.py  textin_tool.py  update_task.py
